fixed overflow

--- a/recipe-project/frontend/src/App.css
+++ b/recipe-project/frontend/src/App.css
@@ -2,13 +2,13 @@
   display: flex; 
   height: 100vh; 
   width: 100vw; 
-  overflow: hidden; 
+  overflow: auto; 
 }
 
 .content-area {
   flex-grow: 1; 
   height: 100%; 
-  overflow: hidden; 
+  overflow: auto; 
   transition: margin-left 0.3s ease-in-out;
 }
 
